--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -906,11 +906,11 @@ allow 23.191.200.25;
 allow 23.191.200.26;
 allow 23.191.200.27;
 allow 23.191.200.28;
+allow 23.191.200.29;
 allow 23.191.200.3;
 allow 23.191.200.30;
 allow 23.191.200.31;
 allow 23.191.200.4;
-allow 23.191.200.5;
 allow 23.191.200.6;
 allow 23.191.200.7;
 allow 23.191.200.8;
@@ -1473,6 +1473,7 @@ allow 2a0f:85c1:356:16a4::1;
 allow 2a0f:85c1:356:231b::1;
 allow 2a0f:85c1:356:3238::1;
 allow 2a0f:85c1:356:5a46::1;
+allow 2a0f:85c1:356:5c50::1;
 allow 2a0f:85c1:356:62ed::1;
 allow 2a0f:cdc6:500:11e3::2;
 allow 2a0f:df00:0:255::194;
@@ -1656,6 +1657,7 @@ allow 45.145.93.133;
 allow 45.148.10.111;
 allow 45.154.98.33;
 allow 45.38.20.123;
+allow 45.38.20.153;
 allow 45.58.190.74;
 allow 45.61.185.172;
 allow 45.61.188.15;
@@ -1856,6 +1858,8 @@ allow 91.203.144.194;
 allow 91.203.145.116;
 allow 91.206.26.26;
 allow 91.208.75.153;
+allow 91.208.75.156;
+allow 91.208.75.239;
 allow 91.208.75.3;
 allow 91.208.75.4;
 allow 91.219.236.101;
@@ -1871,6 +1875,7 @@ allow 93.123.12.112;
 allow 93.94.51.243;
 allow 93.94.52.229;
 allow 93.95.227.37;
+allow 93.95.228.105;
 allow 93.95.228.125;
 allow 93.95.231.14;
 allow 93.95.231.88;
