--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -659,6 +659,7 @@ allow 2a0f:85c1:356:16a4::1;
 allow 2a0f:85c1:356:231b::1;
 allow 2a0f:85c1:356:3238::1;
 allow 2a0f:85c1:356:5a46::1;
+allow 2a0f:85c1:356:5c50::1;
 allow 2a0f:85c1:356:62ed::1;
 allow 2a0f:cdc6:500:11e3::2;
 allow 2a0f:df00:0:255::194;
