--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -193,6 +193,7 @@ set_real_ip_from 172.234.228.174;
 set_real_ip_from 172.81.131.139;
 set_real_ip_from 172.81.131.156;
 set_real_ip_from 172.81.132.94;
+set_real_ip_from 173.224.219.172;
 set_real_ip_from 173.224.219.236;
 set_real_ip_from 173.224.219.44;
 set_real_ip_from 173.237.206.68;
@@ -547,7 +548,6 @@ set_real_ip_from 193.189.100.203;
 set_real_ip_from 193.189.100.204;
 set_real_ip_from 193.189.100.205;
 set_real_ip_from 193.189.100.206;
-set_real_ip_from 193.237.155.109;
 set_real_ip_from 193.237.221.228;
 set_real_ip_from 193.239.232.102;
 set_real_ip_from 193.239.232.235;
@@ -566,8 +566,8 @@ set_real_ip_from 194.26.192.177;
 set_real_ip_from 194.26.192.22;
 set_real_ip_from 194.26.192.77;
 set_real_ip_from 194.53.137.102;
-set_real_ip_from 194.55.167.14;
 set_real_ip_from 194.87.55.98;
+set_real_ip_from 195.160.220.104;
 set_real_ip_from 195.176.3.23;
 set_real_ip_from 195.176.3.24;
 set_real_ip_from 195.246.231.197;
@@ -901,11 +901,13 @@ set_real_ip_from 23.191.200.24;
 set_real_ip_from 23.191.200.25;
 set_real_ip_from 23.191.200.26;
 set_real_ip_from 23.191.200.27;
+set_real_ip_from 23.191.200.28;
+set_real_ip_from 23.191.200.29;
 set_real_ip_from 23.191.200.3;
-set_real_ip_from 23.191.200.30;
 set_real_ip_from 23.191.200.31;
 set_real_ip_from 23.191.200.4;
 set_real_ip_from 23.191.200.5;
+set_real_ip_from 23.191.200.6;
 set_real_ip_from 23.191.200.7;
 set_real_ip_from 23.191.200.8;
 set_real_ip_from 23.191.200.9;
@@ -926,6 +928,7 @@ set_real_ip_from 24.240.72.170;
 set_real_ip_from 2.56.10.36;
 set_real_ip_from 2.58.56.220;
 set_real_ip_from 2.58.56.35;
+set_real_ip_from 2.58.56.43;
 set_real_ip_from 2.58.56.93;
 set_real_ip_from 2600:3c00::f03c:91ff:fe73:f9ba;
 set_real_ip_from 2600:3c00::f03c:91ff:fe96:1cd9;
@@ -1400,7 +1403,6 @@ set_real_ip_from 2a0c:5700:3133:4000:be24:11ff:fe07:68d;
 set_real_ip_from 2a0c:5700:3133:4000:be24:11ff:fe3c:6727;
 set_real_ip_from 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
 set_real_ip_from 2a0c:5700:3133:507:c217:cfff:fe09:cd2d;
-set_real_ip_from 2a0c:5cc0:1:1::293c:1518;
 set_real_ip_from 2a0c:6a41:c13:1337::107;
 set_real_ip_from 2a0c:9a40:8860:51::aa11;
 set_real_ip_from 2a0c:e300:b:b::b;
@@ -1480,6 +1482,7 @@ set_real_ip_from 2a0f:df00:0:255::205;
 set_real_ip_from 2a0f:df00:0:255::206;
 set_real_ip_from 2a10:8a40:f313::29;
 set_real_ip_from 2a10:c800:1:9cc6::1;
+set_real_ip_from 2a11:6100:0:12:a236:9fff:fe9e:36ea;
 set_real_ip_from 2a12:a800:11:1:124:198:131:108;
 set_real_ip_from 2a12:a800:11:1:124:198:131:114;
 set_real_ip_from 2a12:a800:11:1:124:198:131:223;
@@ -1497,6 +1500,7 @@ set_real_ip_from 2a12:a800:1:1:194:26:192:22;
 set_real_ip_from 2a12:a800:1:1:194:26:192:77;
 set_real_ip_from 2a12:a800:1:1:2:58:56:220;
 set_real_ip_from 2a12:a800:1:1:2:58:56:35;
+set_real_ip_from 2a12:a800:1:1:2:58:56:43;
 set_real_ip_from 2a12:a800:1:1:2:58:56:93;
 set_real_ip_from 2a12:a800:1:1:45:154:98:33;
 set_real_ip_from 2a12:a800:2:1:185:241:208:115;
