--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -200,6 +200,7 @@ allow 173.237.206.68;
 allow 173.255.198.243;
 allow 176.118.193.33;
 allow 176.121.81.51;
+allow 176.58.121.177;
 allow 176.58.89.182;
 allow 176.65.134.4;
 allow 176.65.148.133;
@@ -210,6 +211,7 @@ allow 176.65.149.87;
 allow 176.65.149.88;
 allow 176.65.149.96;
 allow 176.97.114.202;
+allow 177.93.140.66;
 allow 178.17.170.144;
 allow 178.17.170.23;
 allow 178.17.171.102;
@@ -293,6 +295,7 @@ allow 185.177.238.9;
 allow 185.183.157.214;
 allow 185.183.159.40;
 allow 185.191.204.254;
+allow 185.191.239.158;
 allow 185.191.239.172;
 allow 185.193.52.180;
 allow 185.195.71.244;
@@ -566,6 +569,8 @@ allow 194.26.192.177;
 allow 194.26.192.22;
 allow 194.26.192.77;
 allow 194.53.137.102;
+allow 194.53.137.156;
+allow 194.55.167.14;
 allow 194.87.55.98;
 allow 195.160.220.104;
 allow 195.176.3.23;
@@ -623,6 +628,7 @@ allow 200.122.181.2;
 allow 2001:41d0:1008:20d1::1;
 allow 2001:41d0:304:200::3348;
 allow 2001:41d0:304:200::3ea4;
+allow 2001:41d0:304:200::9dce;
 allow 2001:41d0:305:2100::4ede;
 allow 2001:41d0:601:1100::26d0;
 allow 2001:41d0:601:1100::6524;
@@ -902,8 +908,8 @@ allow 23.191.200.25;
 allow 23.191.200.26;
 allow 23.191.200.27;
 allow 23.191.200.28;
-allow 23.191.200.29;
 allow 23.191.200.3;
+allow 23.191.200.30;
 allow 23.191.200.31;
 allow 23.191.200.4;
 allow 23.191.200.5;
@@ -1160,6 +1166,7 @@ allow 2a01:270:9847::1;
 allow 2a01:5e0:36:c311::1;
 allow 2a01:5e0:36:cf2a::1;
 allow 2a01:6340:2:501::10;
+allow 2a01:7e00::f03c:91ff:fe78:b382;
 allow 2a02:16d0:0:5::1;
 allow 2a02:418:6017::147;
 allow 2a02:418:6017::148;
@@ -1224,6 +1231,7 @@ allow 2a04:52c0:123:5ccf:50ef:cafe:babe:1337;
 allow 2a04:52c0:123:c6c3::1;
 allow 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 allow 2a04:52c0:130:896e::1;
+allow 2a04:9dc0:31::c0cc:4d;
 allow 2a05:541:110:3e::1;
 allow 2a05:541:112:31::1;
 allow 2a05:b0c7:6388::1;
@@ -1403,6 +1411,7 @@ allow 2a0c:5700:3133:4000:be24:11ff:fe07:68d;
 allow 2a0c:5700:3133:4000:be24:11ff:fe3c:6727;
 allow 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
 allow 2a0c:5700:3133:507:c217:cfff:fe09:cd2d;
+allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:6a41:c13:1337::107;
 allow 2a0c:9a40:8860:51::aa11;
 allow 2a0c:e300:b:b::b;
@@ -1423,7 +1432,9 @@ allow 2a0d:bbc7::f816:3eff:fee9:3e45;
 allow 2a0d:bbc7::f816:3eff:feec:9f18;
 allow 2a0d:bbc7::f816:3eff:fef2:6521;
 allow 2a0d:c2c0:1:4::2;
+allow 2a0e:1d80:13:51e8::1;
 allow 2a0e:1d80:13:b6d5::1;
+allow 2a0e:1d80:17:6f8d::1;
 allow 2a0e:4005:1002:ffff:185:40:4:100;
 allow 2a0e:4005:1002:ffff:185:40:4:101;
 allow 2a0e:4005:1002:ffff:185:40:4:127;
@@ -1797,6 +1808,7 @@ allow 80.94.92.92;
 allow 80.94.92.99;
 allow 81.16.33.42;
 allow 81.17.28.95;
+allow 81.181.104.22;
 allow 82.117.255.113;
 allow 82.118.248.205;
 allow 82.153.138.125;
@@ -1810,6 +1822,7 @@ allow 82.221.131.86;
 allow 82.221.139.190;
 allow 83.217.9.73;
 allow 83.96.213.63;
+allow 83.97.20.77;
 allow 84.16.224.227;
 allow 84.19.182.20;
 allow 84.211.224.201;
