--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -200,6 +200,7 @@ set_real_ip_from 173.237.206.68;
 set_real_ip_from 173.255.198.243;
 set_real_ip_from 176.118.193.33;
 set_real_ip_from 176.121.81.51;
+set_real_ip_from 176.58.121.177;
 set_real_ip_from 176.58.89.182;
 set_real_ip_from 176.65.134.4;
 set_real_ip_from 176.65.148.133;
@@ -210,6 +211,7 @@ set_real_ip_from 176.65.149.87;
 set_real_ip_from 176.65.149.88;
 set_real_ip_from 176.65.149.96;
 set_real_ip_from 176.97.114.202;
+set_real_ip_from 177.93.140.66;
 set_real_ip_from 178.17.170.144;
 set_real_ip_from 178.17.170.23;
 set_real_ip_from 178.17.171.102;
@@ -293,6 +295,7 @@ set_real_ip_from 185.177.238.9;
 set_real_ip_from 185.183.157.214;
 set_real_ip_from 185.183.159.40;
 set_real_ip_from 185.191.204.254;
+set_real_ip_from 185.191.239.158;
 set_real_ip_from 185.191.239.172;
 set_real_ip_from 185.193.52.180;
 set_real_ip_from 185.195.71.244;
@@ -566,6 +569,8 @@ set_real_ip_from 194.26.192.177;
 set_real_ip_from 194.26.192.22;
 set_real_ip_from 194.26.192.77;
 set_real_ip_from 194.53.137.102;
+set_real_ip_from 194.53.137.156;
+set_real_ip_from 194.55.167.14;
 set_real_ip_from 194.87.55.98;
 set_real_ip_from 195.160.220.104;
 set_real_ip_from 195.176.3.23;
@@ -623,6 +628,7 @@ set_real_ip_from 200.122.181.2;
 set_real_ip_from 2001:41d0:1008:20d1::1;
 set_real_ip_from 2001:41d0:304:200::3348;
 set_real_ip_from 2001:41d0:304:200::3ea4;
+set_real_ip_from 2001:41d0:304:200::9dce;
 set_real_ip_from 2001:41d0:305:2100::4ede;
 set_real_ip_from 2001:41d0:601:1100::26d0;
 set_real_ip_from 2001:41d0:601:1100::6524;
@@ -902,8 +908,8 @@ set_real_ip_from 23.191.200.25;
 set_real_ip_from 23.191.200.26;
 set_real_ip_from 23.191.200.27;
 set_real_ip_from 23.191.200.28;
-set_real_ip_from 23.191.200.29;
 set_real_ip_from 23.191.200.3;
+set_real_ip_from 23.191.200.30;
 set_real_ip_from 23.191.200.31;
 set_real_ip_from 23.191.200.4;
 set_real_ip_from 23.191.200.5;
@@ -1160,6 +1166,7 @@ set_real_ip_from 2a01:270:9847::1;
 set_real_ip_from 2a01:5e0:36:c311::1;
 set_real_ip_from 2a01:5e0:36:cf2a::1;
 set_real_ip_from 2a01:6340:2:501::10;
+set_real_ip_from 2a01:7e00::f03c:91ff:fe78:b382;
 set_real_ip_from 2a02:16d0:0:5::1;
 set_real_ip_from 2a02:418:6017::147;
 set_real_ip_from 2a02:418:6017::148;
@@ -1224,6 +1231,7 @@ set_real_ip_from 2a04:52c0:123:5ccf:50ef:cafe:babe:1337;
 set_real_ip_from 2a04:52c0:123:c6c3::1;
 set_real_ip_from 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 set_real_ip_from 2a04:52c0:130:896e::1;
+set_real_ip_from 2a04:9dc0:31::c0cc:4d;
 set_real_ip_from 2a05:541:110:3e::1;
 set_real_ip_from 2a05:541:112:31::1;
 set_real_ip_from 2a05:b0c7:6388::1;
@@ -1403,6 +1411,7 @@ set_real_ip_from 2a0c:5700:3133:4000:be24:11ff:fe07:68d;
 set_real_ip_from 2a0c:5700:3133:4000:be24:11ff:fe3c:6727;
 set_real_ip_from 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
 set_real_ip_from 2a0c:5700:3133:507:c217:cfff:fe09:cd2d;
+set_real_ip_from 2a0c:5cc0:1:1::293c:1518;
 set_real_ip_from 2a0c:6a41:c13:1337::107;
 set_real_ip_from 2a0c:9a40:8860:51::aa11;
 set_real_ip_from 2a0c:e300:b:b::b;
@@ -1423,7 +1432,9 @@ set_real_ip_from 2a0d:bbc7::f816:3eff:fee9:3e45;
 set_real_ip_from 2a0d:bbc7::f816:3eff:feec:9f18;
 set_real_ip_from 2a0d:bbc7::f816:3eff:fef2:6521;
 set_real_ip_from 2a0d:c2c0:1:4::2;
+set_real_ip_from 2a0e:1d80:13:51e8::1;
 set_real_ip_from 2a0e:1d80:13:b6d5::1;
+set_real_ip_from 2a0e:1d80:17:6f8d::1;
 set_real_ip_from 2a0e:4005:1002:ffff:185:40:4:100;
 set_real_ip_from 2a0e:4005:1002:ffff:185:40:4:101;
 set_real_ip_from 2a0e:4005:1002:ffff:185:40:4:127;
@@ -1797,6 +1808,7 @@ set_real_ip_from 80.94.92.92;
 set_real_ip_from 80.94.92.99;
 set_real_ip_from 81.16.33.42;
 set_real_ip_from 81.17.28.95;
+set_real_ip_from 81.181.104.22;
 set_real_ip_from 82.117.255.113;
 set_real_ip_from 82.118.248.205;
 set_real_ip_from 82.153.138.125;
@@ -1810,6 +1822,7 @@ set_real_ip_from 82.221.131.86;
 set_real_ip_from 82.221.139.190;
 set_real_ip_from 83.217.9.73;
 set_real_ip_from 83.96.213.63;
+set_real_ip_from 83.97.20.77;
 set_real_ip_from 84.16.224.227;
 set_real_ip_from 84.19.182.20;
 set_real_ip_from 84.211.224.201;
