--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -131,7 +131,6 @@ allow 141.98.11.62;
 allow 143.20.64.235;
 allow 144.126.133.74;
 allow 144.172.73.31;
-allow 144.31.188.82;
 allow 146.103.43.17;
 allow 146.59.126.232;
 allow 146.59.231.4;
@@ -279,7 +278,6 @@ allow 185.129.62.62;
 allow 185.129.62.63;
 allow 185.129.62.64;
 allow 185.130.47.58;
-allow 185.132.53.107;
 allow 185.132.53.150;
 allow 185.138.88.25;
 allow 185.14.31.113;
@@ -551,6 +549,7 @@ allow 193.189.100.203;
 allow 193.189.100.204;
 allow 193.189.100.205;
 allow 193.189.100.206;
+allow 193.237.155.109;
 allow 193.237.221.228;
 allow 193.239.232.102;
 allow 193.239.232.235;
@@ -906,8 +905,8 @@ allow 23.191.200.23;
 allow 23.191.200.24;
 allow 23.191.200.25;
 allow 23.191.200.26;
-allow 23.191.200.27;
 allow 23.191.200.28;
+allow 23.191.200.29;
 allow 23.191.200.3;
 allow 23.191.200.30;
 allow 23.191.200.31;
@@ -1170,6 +1169,7 @@ allow 2a01:7e00::f03c:91ff:fe78:b382;
 allow 2a02:16d0:0:5::1;
 allow 2a02:418:6017::147;
 allow 2a02:418:6017::148;
+allow 2a02:4780:28:448e::1;
 allow 2a02:898:218::1;
 allow 2a02:898:218::2;
 allow 2a02:c204:2195:2012::1;
@@ -1220,7 +1220,7 @@ allow 2a04:52c0:103:5acd::1;
 allow 2a04:52c0:104:31e6::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
-allow 2a04:52c0:105:82c0::1;
+allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
@@ -1571,7 +1571,6 @@ allow 2a12:a800:9:1:45:88:186:92;
 allow 2a14:1ec7:1000:a633::1;
 allow 2a14:7583:f607::;
 allow 2a14:c380:280:6::a;
-allow 2a14:c380:50:62::a;
 allow 2c0f:6c0:0:d::d28b;
 allow 31.129.22.65;
 allow 31.133.0.210;
@@ -1725,7 +1724,7 @@ allow 51.81.222.62;
 allow 51.91.18.151;
 allow 5.196.95.34;
 allow 5.253.247.27;
-allow 5.255.100.224;
+allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.235;
@@ -1787,6 +1786,7 @@ allow 72.14.179.10;
 allow 72.211.49.235;
 allow 72.235.129.116;
 allow 72.5.43.62;
+allow 72.60.213.119;
 allow 74.208.79.7;
 allow 74.82.47.194;
 allow 77.48.28.193;
@@ -1878,7 +1878,6 @@ allow 93.123.109.116;
 allow 93.123.109.44;
 allow 93.123.12.112;
 allow 93.94.51.243;
-allow 93.94.52.229;
 allow 93.95.227.37;
 allow 93.95.228.105;
 allow 93.95.228.125;
