--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -354,7 +354,6 @@ allow 2a01:7e00::f03c:91ff:fe78:b382;
 allow 2a02:16d0:0:5::1;
 allow 2a02:418:6017::147;
 allow 2a02:418:6017::148;
-allow 2a02:4780:28:448e::1;
 allow 2a02:898:218::1;
 allow 2a02:898:218::2;
 allow 2a02:c204:2195:2012::1;
@@ -650,7 +649,6 @@ allow 2a0e:bfc0:0:11::796d;
 allow 2a0e:bfc0:0:14::24a8;
 allow 2a0e:bfc0:0:2::8a62;
 allow 2a0e:bfc0:0:5::2;
-allow 2a0e:bfc7:0:3::2d83;
 allow 2a0e:bfc7::216:3cff:fe6f:c4ca;
 allow 2a0e:bfc7::216:3cff:fe98:45cb;
 allow 2a0e:bfc7::216:3cff:fece:19ec;
@@ -756,4 +754,5 @@ allow 2a12:a800:9:1:45:88:186:92;
 allow 2a14:1ec7:1000:a633::1;
 allow 2a14:7583:f607::;
 allow 2a14:c380:280:6::a;
+allow 2a14:c380:50:62::a;
 allow 2c0f:6c0:0:d::d28b;
