--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -278,6 +278,7 @@ deny 185.129.62.62;
 deny 185.129.62.63;
 deny 185.129.62.64;
 deny 185.130.47.58;
+deny 185.132.53.107;
 deny 185.132.53.150;
 deny 185.138.88.25;
 deny 185.14.31.113;
@@ -909,7 +910,6 @@ deny 23.191.200.28;
 deny 23.191.200.29;
 deny 23.191.200.3;
 deny 23.191.200.30;
-deny 23.191.200.31;
 deny 23.191.200.4;
 deny 23.191.200.5;
 deny 23.191.200.6;
@@ -1169,7 +1169,6 @@ deny 2a01:7e00::f03c:91ff:fe78:b382;
 deny 2a02:16d0:0:5::1;
 deny 2a02:418:6017::147;
 deny 2a02:418:6017::148;
-deny 2a02:4780:28:448e::1;
 deny 2a02:898:218::1;
 deny 2a02:898:218::2;
 deny 2a02:c204:2195:2012::1;
@@ -1465,7 +1464,6 @@ deny 2a0e:bfc0:0:11::796d;
 deny 2a0e:bfc0:0:14::24a8;
 deny 2a0e:bfc0:0:2::8a62;
 deny 2a0e:bfc0:0:5::2;
-deny 2a0e:bfc7:0:3::2d83;
 deny 2a0e:bfc7::216:3cff:fe6f:c4ca;
 deny 2a0e:bfc7::216:3cff:fe98:45cb;
 deny 2a0e:bfc7::216:3cff:fece:19ec;
@@ -1571,6 +1569,7 @@ deny 2a12:a800:9:1:45:88:186:92;
 deny 2a14:1ec7:1000:a633::1;
 deny 2a14:7583:f607::;
 deny 2a14:c380:280:6::a;
+deny 2a14:c380:50:62::a;
 deny 2c0f:6c0:0:d::d28b;
 deny 31.129.22.65;
 deny 31.133.0.210;
@@ -1695,7 +1694,6 @@ deny 45.88.186.89;
 deny 45.88.186.92;
 deny 45.91.250.107;
 deny 45.9.148.50;
-deny 45.9.156.101;
 deny 45.9.156.105;
 deny 45.9.156.161;
 deny 45.9.156.22;
@@ -1786,7 +1784,6 @@ deny 72.14.179.10;
 deny 72.211.49.235;
 deny 72.235.129.116;
 deny 72.5.43.62;
-deny 72.60.213.119;
 deny 74.208.79.7;
 deny 74.82.47.194;
 deny 77.48.28.193;
@@ -1878,6 +1875,7 @@ deny 93.123.109.116;
 deny 93.123.109.44;
 deny 93.123.12.112;
 deny 93.94.51.243;
+deny 93.94.52.229;
 deny 93.95.227.37;
 deny 93.95.228.105;
 deny 93.95.228.125;
