--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -199,6 +199,7 @@ set_real_ip_from 173.237.206.68;
 set_real_ip_from 173.255.198.243;
 set_real_ip_from 176.118.193.33;
 set_real_ip_from 176.121.81.51;
+set_real_ip_from 176.58.121.177;
 set_real_ip_from 176.58.89.182;
 set_real_ip_from 176.65.134.4;
 set_real_ip_from 176.65.148.133;
@@ -238,7 +239,6 @@ set_real_ip_from 179.43.159.78;
 set_real_ip_from 179.43.182.232;
 set_real_ip_from 179.43.182.58;
 set_real_ip_from 180.150.226.99;
-set_real_ip_from 18.119.162.10;
 set_real_ip_from 185.100.85.132;
 set_real_ip_from 185.100.85.24;
 set_real_ip_from 185.100.85.25;
@@ -720,6 +720,7 @@ set_real_ip_from 2001:67c:e60:c0c:192:42:116:216;
 set_real_ip_from 2001:67c:e60:c0c:192:42:116:217;
 set_real_ip_from 2001:67c:e60:c0c:192:42:116:218;
 set_real_ip_from 2001:67c:e60:c0c:192:42:116:219;
+set_real_ip_from 2001:818:dd58:a900:2512:9be4:189f:86a;
 set_real_ip_from 2001:b011:4006:54d6::b;
 set_real_ip_from 2001:b030:2422::7234;
 set_real_ip_from 2001:bc8:1640:317d:dc00:ff:fe39:7bb3;
@@ -903,6 +904,7 @@ set_real_ip_from 23.191.200.24;
 set_real_ip_from 23.191.200.25;
 set_real_ip_from 23.191.200.26;
 set_real_ip_from 23.191.200.27;
+set_real_ip_from 23.191.200.28;
 set_real_ip_from 23.191.200.29;
 set_real_ip_from 23.191.200.3;
 set_real_ip_from 23.191.200.30;
@@ -1163,6 +1165,7 @@ set_real_ip_from 2a01:270:9847::1;
 set_real_ip_from 2a01:5e0:36:c311::1;
 set_real_ip_from 2a01:5e0:36:cf2a::1;
 set_real_ip_from 2a01:6340:2:501::10;
+set_real_ip_from 2a01:7e00::f03c:91ff:fe78:b382;
 set_real_ip_from 2a02:16d0:0:5::1;
 set_real_ip_from 2a02:418:6017::147;
 set_real_ip_from 2a02:418:6017::148;
@@ -1838,6 +1841,7 @@ set_real_ip_from 88.80.20.86;
 set_real_ip_from 88.80.26.2;
 set_real_ip_from 88.80.26.3;
 set_real_ip_from 88.80.26.4;
+set_real_ip_from 89.115.155.184;
 set_real_ip_from 89.147.108.90;
 set_real_ip_from 89.147.110.118;
 set_real_ip_from 89.147.110.154;
@@ -1871,7 +1875,6 @@ set_real_ip_from 93.123.109.116;
 set_real_ip_from 93.123.109.44;
 set_real_ip_from 93.123.12.112;
 set_real_ip_from 93.94.51.243;
-set_real_ip_from 93.94.52.229;
 set_real_ip_from 93.95.227.37;
 set_real_ip_from 93.95.228.105;
 set_real_ip_from 93.95.228.125;
